pkl-core/src/test/files/LanguageSnippetTests/input/errors/cannotAmendFixedProperty2.pkl
amends "../basic/fixedProperty1.pkl"

res3 {
  name = "Osprey"
}
